[package]
name = "whistle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = '0.13.0'
base64 = '0.13.1'
reqwest = '0.11.13'
hyper = { version = '0.13.10' }
tokio = { version = '1.13.0', features = ['full'] }
axum = "0.6"