[package]
name = "whistle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = '0.13.0'
base64 = '0.13.1'
reqwest = '0.11.13'
axum = { version = "0.6.1" }
axum-extra = { version = "0.4.2", features = ["typed-routing"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
hyper-native-tls = "0.3.0"
hyper-tls = { version = "0.5.0" }
tokio-core = "0.1.17"